added tiff as zarr option

--- a/230817_omeZarr_tests.ipynb
+++ b/230817_omeZarr_tests.ipynb
@@ -23,8 +23,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im_path = r'D:\\data_analysis\\2023_Stallaert\\TP19M626-22_Final\\TP19M626-22_1.0.4_R000_Cy7_CDC6-AF750_FINAL_AFR_F.tif'\n",
+    "from napari.settings import get_settings\n",
+    "settings = get_settings()\n",
+    "settings.application.ipy_interactive = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im_path = r'R:\\CellDive\\TCELL-01\\TCELL-01_Final\\TCELL-01_1.0.4_R000_Cy3_p21-AF555_FINAL_AFR_F.ome.tif'\n",
+    "#r'D:\\data_analysis\\2023_Stallaert\\TP19M626-22_Final\\TP19M626-22_1.0.4_R000_Cy7_CDC6-AF750_FINAL_AFR_F.tif'\n",
     "zarr_path = r'D:\\data_analysis\\2023_Stallaert\\TP19M626-22_Final\\test.zarr'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open tiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tifffile.ZarrTiffStore @0x000001B231307A90>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store = imread(im_path,aszarr=True)\n",
+    "store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "\n",
+    "# as Napari seems to open only 6 levels anyway \n",
+    "for i in range(6):\n",
+    "    d = da.from_zarr(store, i)\n",
+    "    l.append(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[dask.array<from-zarr, shape=(53784, 140982), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(26892, 70491), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(13446, 35245), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(6723, 17622), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(3361, 8811), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(1680, 4405), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(840, 2202), dtype=uint16, chunksize=(512, 512), chunktype=numpy.ndarray>,\n",
+       " dask.array<from-zarr, shape=(420, 1101), dtype=uint16, chunksize=(420, 512), chunktype=numpy.ndarray>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'l' at 0x1b231307d30>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewer = napari.Viewer()\n",
+    "viewer.add_image(l,contrast_limits=[0,10000])"
    ]
   },
   {
@@ -373,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
