--- a/230817_omeZarr_tests.ipynb
+++ b/230817_omeZarr_tests.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "from napari.settings import get_settings\n",
     "settings = get_settings()\n",
-    "settings.application.ipy_interactive = True\n"
+    "settings.application.ipy_interactive = True"
    ]
   },
   {
