--- a/230817_omeZarr_tests.ipynb
+++ b/230817_omeZarr_tests.ipynb
@@ -36,7 +36,8 @@
    "source": [
     "im_path = r'R:\\CellDive\\TCELL-01\\TCELL-01_Final\\TCELL-01_1.0.4_R000_Cy3_p21-AF555_FINAL_AFR_F.ome.tif'\n",
     "#r'D:\\data_analysis\\2023_Stallaert\\TP19M626-22_Final\\TP19M626-22_1.0.4_R000_Cy7_CDC6-AF750_FINAL_AFR_F.tif'\n",
-    "zarr_path = r'D:\\data_analysis\\2023_Stallaert\\TP19M626-22_Final\\test.zarr'\n"
+    "zarr_path = r'D:\\data_analysis\\2023_Stallaert\\TP19M626-22_Final\\test.zarr'\n",
+    "\n"
    ]
   },
   {
