--- a/open_segment_lifs.ipynb
+++ b/open_segment_lifs.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.4.19.post1'"
+       "True"
       ]
      },
      "execution_count": 6,
@@ -37,32 +37,13 @@
     }
    ],
    "source": [
-    "napari.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "import torch\n",
     "torch.cuda.is_available()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +54,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_list = [image.name for image in image_stack.get_iter_image() if (('Merged' in image.name))]\n",
+    "len(img_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['R1_RB-AF750/B/5_Merged',\n",
+       " 'R1_RB-AF750/B/7_Merged',\n",
+       " 'R1_RB-AF750/D/3_Merged',\n",
+       " 'R1_RB-AF750/D/4_Merged',\n",
+       " 'R1_RB-AF750/D/6_Merged',\n",
+       " 'R1_RB-AF750/C2_Merged',\n",
+       " 'R1_RB-AF750/F8_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/B/5_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/B/7_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/D/3_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/D/4_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/D/6_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/C2_Merged',\n",
+       " 'R1_DAPI_PLK1-AF488_PH2AX-AF555_p21-AF647/F8_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/B/5_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/B/7_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/D/3_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/D/4_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/D/6_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/C2_Merged',\n",
+       " 'R2_DAPI_Fibrillarin-AF647/F8_Merged',\n",
+       " 'TileScan 1/B/5_Merged',\n",
+       " 'TileScan 1/B/7_Merged',\n",
+       " 'TileScan 1/D/3_Merged',\n",
+       " 'TileScan 1/D/4_Merged',\n",
+       " 'TileScan 1/D/6_Merged',\n",
+       " 'TileScan 1/C2_Merged',\n",
+       " 'TileScan 1/F8_Merged']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +158,7 @@
        "  Dims(x=16784, y=16775, z=1, t=1, m=1)]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
