--- a/visualize_cell_tracking.ipynb
+++ b/visualize_cell_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,65 @@
     "import numpy as np\n",
     "import os\n",
     "os.environ['NAPARI_PERFMON'] = '0'\n",
-    "import cv2"
+    "import cv2\n",
+    "from readlif.reader import LifFile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_path = r'R:\\Dante\\hillman_academy_2023\\Jinny_test.lif'\n",
+    "exp = LifFile(exp_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LifImage object with dimensions: Dims(x=16802, y=16793, z=1, t=241, m=1)'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sel_name = 'TileScan 5/E6_Merged'\n",
+    "t = [image for image in exp.get_iter_image() if sel_name in image.name][0]\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.076923076923077, 3.0769230769230766, None, 0.0005601651180046172)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +83,7 @@
     "cell_rad = 80\n",
     "\n",
     "# timer\n",
-    "interval = 15\n",
+    "interval = 30\n",
     "# timer position\n",
     "timer_r = 20\n",
     "timer_c = 140\n",
@@ -48,8 +101,9 @@
     "height_px = 1\n",
     "pos_col = 10\n",
     "pos_row = 150\n",
-    "len_pixel = 50\n",
-    "scale_bar_text = '100 \\u03BCm'\n",
+    "len_um = 20\n",
+    "len_pixel = t.scale[0] * len_um / 2 # because we were using the second resolution level\n",
+    "scale_bar_text = f'{len_um} \\u03BCm'\n",
     "\n",
     "save_dir = r'D:\\kasia\\ovcar_movies'\n",
     "video_speed = 15"
@@ -57,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
